# CHANGELOG

This is rather free-form for now, but eventually this will be properly timestamped, and will mention the version the changes apply to!

2022-08-22 Fred Mercy <fred@folkloreinc.ca>

    * Added new hook `useTransitionStyles` to help when working with `use-spring` and `use-gesture`
    * Added new gestures and transitions to `Horoscope` screen type
    * Added more options to `useLongPress` hook

2022-08-11 Fred Mercy <fred@folkloreinc.ca>

    * Added a CHANGELOG.md file to document the project's evolution
    * Added animated hover/active states to buttons, navigation elements, etc.
    * Added preliminary transition animations between screens
    * Added preliminary gesture animations between screens
    * Changed navigation menu to split "Share" button and "Preview menu" buttons
    * Changed icons used in main navigation menu
    * Changed the size and icons used for playback controls