@@ -257,6 +257,7 @@ const Video = ({
         if (paused && !isPaused) {
             element.pause();
         } else if (!paused && isPaused) {
+            element.muted = true;
             element.play();
         }
     }, [paused]);
